[package]
name = "mezzenger-channel"
version = "0.1.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "mezzenger transport over futures channels."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-channel"
documentation = "https://docs.rs/mezzenger-channel/"
keywords = ["message", "message-passing", "communication", "mezzenger", "futures", "channel"]

[dependencies]
mezzenger = "0.1.2"
futures = "0.3.25"
pin-project = "1.0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.33"
