[package]
name = "mezzenger-common"
version = "0.1.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "Building blocks for mezzenger transports."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-common"
documentation = "https://docs.rs/mezzenger-common/"
keywords = ["message", "message-passing", "communication", "mezzenger"]

[dependencies]
mezzenger = { path = "../mezzenger" }
futures = "0.3.25"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = "0.12.1"
