[package]
name = "mezzenger-http"
version = "0.0.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "HTTP mezzenger transport."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-http"
documentation = "https://docs.rs/mezzenger-http/"
keywords = ["message", "message-passing", "communication", "mezzenger", "http"]

[dependencies]
