[package]
name = "mezzenger-dummy"
version = "0.1.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "Loopback mezzenger transport."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-loopback"
documentation = "https://docs.rs/mezzenger/"
keywords = ["message", "message-passing", "communication", "mezzenger", "loopback"]

[dependencies]
mezzenger = { path = "../mezzenger" }
futures = "0.3.25"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = "0.12.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.33"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
