[package]
name = "mezzenger-rpc-macros"
version = "0.0.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "Procedural macros for mezzenger-rpc."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-rpc-macros"
documentation = "https://docs.rs/mezzenger-rpc-macros/"
keywords = ["communication", "mezzenger", "rpc", "macro"]
