[package]
name = "mezzenger-rpc"
version = "0.0.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "Remote procedure call solution over mezzenger transports."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-rpc"
documentation = "https://docs.rs/mezzenger-rpc/"
keywords = ["communication", "mezzenger", "rpc"]