[package]
name = "mezzenger-tcp"
version = "0.0.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "TCP mezzenger transport."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-tcp"
documentation = "https://docs.rs/mezzenger-tcp/"
keywords = ["message", "message-passing", "communication", "mezzenger", "tcp"]

[dependencies]
