[package]
name = "mezzenger-tcp"
version = "0.1.1"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "TCP mezzenger transport."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-tcp"
documentation = "https://docs.rs/mezzenger-tcp/"
keywords = ["message", "message-passing", "communication", "mezzenger", "tcp"]

[dependencies]
mezzenger = "0.1.2"
serde = { version = "1.0.147", features = ["derive"] }
kodec = "0.1.0"
futures = "0.3.25"
tokio = { version = "1.22.0" }
tokio-util = { version = "0.7.4", features = ["io"] }
pin-project = "1.0.12"
bytes = "1.3.0"

[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }
kodec = { version = "0.1.0", features = ["binary"] }
