[package]
name = "mezzenger-tcp"
version = "0.1.3"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "TCP mezzenger transport."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-tcp"
documentation = "https://docs.rs/mezzenger-tcp/"
keywords = ["message", "message-passing", "communication", "mezzenger", "tcp"]

[dependencies]
mezzenger = "0.1.4"
serde = { version = "1.0.188", features = ["derive"] }
kodec = "0.1.0"
futures = "0.3.28"
tokio = { version = "1.32.0" }
tokio-util = { version = "0.7.8", features = ["io"] }
pin-project = "1.1.3"
bytes = "1.5.0"

[dev-dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
kodec = { version = "0.1.0", features = ["binary"] }
rustyline-async = "0.4.0"
parity-tokio-ipc = "0.9.0"
