[package]
name = "mezzenger-udp"
version = "0.0.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "UDP mezzenger transport."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-udp"
documentation = "https://docs.rs/mezzenger-udp/"
keywords = ["message", "message-passing", "communication", "mezzenger", "udp"]

[dependencies]
