[package]
name = "mezzenger-udp"
version = "0.1.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "UDP mezzenger transport."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-udp"
documentation = "https://docs.rs/mezzenger-udp/"
keywords = ["message", "message-passing", "communication", "mezzenger", "udp"]

[dependencies]
mezzenger = "0.1.2"
serde = { version = "1.0.147", features = ["derive"] }
kodec = "0.1.0"
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["net"] }
pin-project = "1.0.12"

[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }
kodec = { version = "0.1.0", features = ["binary"] }
