[package]
name = "mezzenger-udp"
version = "0.1.5"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "UDP mezzenger transport."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-udp"
documentation = "https://docs.rs/mezzenger-udp/"
keywords = ["message", "message-passing", "communication", "mezzenger", "udp"]

[dependencies]
mezzenger = "0.1.4"
serde = { version = "1.0.188", features = ["derive"] }
kodec = "0.1.0"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["net"] }
pin-project = "1.1.3"

[dev-dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = { version = "1.32.0", features = ["full"] }
kodec = { version = "0.1.0", features = ["binary"] }
device_query = "1.1.3"
mezzenger-utils = "0.1.2"
