[package]
name = "mezzenger-utils"
version = "0.1.1"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "Utilities for mezzenger."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-utils"
documentation = "https://docs.rs/mezzenger-utils/"
keywords = ["message", "message-passing", "communication", "mezzenger", "utils"]

[features]
default = ["inspector", "split", "merge", "numbered", "ordered", "reliable", "last_only"]
inspector = []
split = []
merge = []
numbered = ["num"]
ordered = []
reliable = []
last_only = ["numbered"]

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
mezzenger = "0.1.3"
futures = "0.3.25"
pin-project = "1.0.12"
num = { version = "0.4.0", optional = true }

[dev-dependencies]
mezzenger-channel = "0.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.33"
