[package]
name = "mezzenger-webrtc-datachannel"
version = "0.0.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "WebRTC data channel mezzenger transport."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-webrtc-datachannel"
documentation = "https://docs.rs/mezzenger-webrtc-datachannel/"
keywords = ["message", "message-passing", "communication", "mezzenger", "webrtc", "data-channel"]


[dependencies]
