[package]
name = "mezzenger-websocket"
version = "0.1.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "WebSocket mezzenger transport."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-websocket"
documentation = "https://docs.rs/mezzenger-websocket/"
keywords = ["message", "message-passing", "communication", "mezzenger", "websocket"]

[dependencies]
