[package]
name = "mezzenger-websocket"
version = "0.2.5"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "WebSocket mezzenger transport."
license = "Apache-2.0"
repository = "https://github.com/zduny/mezzenger"
homepage = "https://github.com/zduny/mezzenger/tree/master/mezzenger-websocket"
documentation = "https://docs.rs/mezzenger-websocket/"
keywords = [
    "message",
    "message-passing",
    "communication",
    "mezzenger",
    "websocket"
]

[features]
default = ["native", "wasm"]
native = ["tokio-tungstenite"]
wasm = ["wasm-bindgen", "js-utils", "web-sys"]

[dependencies]
mezzenger = "0.1.4"
serde = { version = "1.0.188", features = ["derive"] }
kodec = "0.1.0"
futures = "0.3.28"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pin-project = "1.1.3"
tungstenite = "0.18.0" # has to match version used by `warp`
tokio-tungstenite = { version = "0.18.0", optional = true } # has to match version used by `warp`
warp = { version = "0.3.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.87", optional = true }
js-utils = { version = "0.1.4", default-features = false, features = [
    "event"
], optional = true }
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    "Location",
    "WebSocket",
    "BinaryType",
    "Event",
    "MessageEvent",
    "CloseEvent",
], optional = true }
