[package]
name = "client-native"
version = "0.1.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "Tests native client."
repository = "https://github.com/zduny/mezzenger"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["derive"] }
futures = "0.3.25"
url = "2.3.1"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = "0.17.0"
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger = { path = "../../mezzenger" }
mezzenger-websocket = { path = "../../mezzenger-websocket" }
