[package]
name = "client-native"
version = "0.1.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "Tests native client."
repository = "https://github.com/zduny/mezzenger"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
futures = "0.3.28"
url = "2.4.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.18.0" # has to match version used by `warp`
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger = { path = "../../mezzenger" }
mezzenger-websocket = { path = "../../mezzenger-websocket" }
