[package]
name = "client"
version = "0.1.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "Tests client."
repository = "https://github.com/zduny/mezzenger"

[profile.release]
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
futures = "0.3.28"
js-utils = "0.1.4"
web-sys = { version = "0.3.64", features = ["WebSocket", "Worker"] }
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger = { path = "../../mezzenger" }
mezzenger-webworker = { path = "../../mezzenger-webworker" }
mezzenger-websocket = { path = "../../mezzenger-websocket" }
