[package]
name = "server"
version = "0.1.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.75"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
warp = "0.3.5"
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger = { path = "../../mezzenger" }
mezzenger-websocket = { path = "../../mezzenger-websocket", default-features = false, features = [
    "warp"
] }
